@@ -540,6 +540,8 @@ extern ba_mp_t *ba_pick_sub_block_cnodes(
 extern int ba_clear_sub_block_cnodes(
 	bg_record_t *bg_record, struct step_record *step_ptr);
 
+extern bitstr_t *ba_create_ba_mp_cnode_bitmap(bg_record_t *bg_record);
+
 /* set the ionode str based off the block allocator, either ionodes
  * or cnode coords */
 extern char *ba_set_ionode_str(bitstr_t *bitmap);
